fixed view problem causing shifting

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 html,
 body {
+    width: 100vw;
     height: 100vh;
     background-img: './img/';
 }
